Home page text (#5)
* home text

* home text

* home page text

--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -1,4 +1,9 @@
 .row
   .columns
     h2
-      = title("Home")
+
+    h3
+      = title("Uptime Monitoring Made Easy")
+    get notified by SMS or email if your website is down. FireWatch checks your website every minute from 5 continents.
+    p
+    p
