--- a/app/views/pages/home.html.slim
+++ b/app/views/pages/home.html.slim
@@ -7,3 +7,5 @@
     get notified by SMS or email if your website is down. FireWatch checks your website every minute from 5 continents.
     p
     p
+    img src="firewatch.png"
+    p
