--- a/app/views/hosts/index.html.slim
+++ b/app/views/hosts/index.html.slim
@@ -9,6 +9,7 @@ table
       th Mstatus
       th Last status
       th Last check
+      th Last check
       th
       th
       th
@@ -22,6 +23,7 @@ table
         td = host.mstatus
         td = host.last_status
         td = host.last_check
+        td = host.lastnode
         td = link_to "Show", host
         td = link_to "Edit", edit_host_path(host)
         td = link_to "Destroy", host, data: { confirm: "Are you sure?" }, method: :delete
