--- a/app/views/pages/dashboard.html.slim
+++ b/app/views/pages/dashboard.html.slim
@@ -38,6 +38,7 @@
             th Protocol
             th Status
             th Latest check
+            th Last node
             th
             th
             th
@@ -66,6 +67,7 @@
                 -else
                   ="DOWN"
               td = host.last_check
+              td = host.lastnode
               td = link_to "Show", host
               td = link_to "Edit", edit_host_path(host)
               td = link_to "Delete", host, data: { confirm: "Are you sure?" }, method: :delete
