--- a/app/views/hosts/index.html.slim
+++ b/app/views/hosts/index.html.slim
@@ -26,7 +26,7 @@ table
         td = host.lastnode
         td = link_to "Show", host
         td = link_to "Edit", edit_host_path(host)
-        td = link_to "Destroy", host, data: { confirm: "Are you sure?" }, method: :delete
+        td = link_to "Delete", host, data: { confirm: "Are you sure?" }, method: :delete
 
 br
 
