--- a/app/views/hosts/_form.html.slim
+++ b/app/views/hosts/_form.html.slim
@@ -17,7 +17,7 @@
     = f.text_field :prot
   .field
     = f.label :mstatus
-    = f.number_field :mstatus
+    = f.number_field :monitor_status
   .field
     = f.label :last_status
     = f.number_field :last_status
