--- a/app/views/hosts/show.html.slim
+++ b/app/views/hosts/show.html.slim
@@ -11,7 +11,7 @@ p
   = @host.prot
 p
   strong Mstatus:
-  = @host.mstatus
+  = @host.monitor_status
 p
   strong Last status:
   = @host.last_status
