--- a/app/views/hosts/_form.html.slim
+++ b/app/views/hosts/_form.html.slim
@@ -16,7 +16,7 @@
     = f.label :prot
     = f.text_field :prot
   .field
-    = f.label :mstatus
+    = f.label :monitor_status
     = f.number_field :monitor_status
   .field
     = f.label :last_status
