--- a/app/views/statuses/_form.html.slim
+++ b/app/views/statuses/_form.html.slim
@@ -16,6 +16,6 @@
     = f.label :status
     = f.number_field :status
   .field
-    = f.label :latency
-    = f.number_field :latency
+    = f.label :response_time
+    = f.number_field :response_time
   .actions = f.submit
