--- a/app/views/pages/dashboard.html.slim
+++ b/app/views/pages/dashboard.html.slim
@@ -23,6 +23,13 @@
         button type="submit" name="commit"
           ="+ Submit for monitoring"
       hr
+        h3
+          = "Administration"
+          br
+        = link_to "Nodes", "nodes/"
+        br
+        = link_to "Aggregators", "aggregators/"
+      hr
     - if @hosts.count.zero?
       h3
         ="You don't have any hosts for monitoring. Create a new one."
