--- a/app/views/nodes/index.html.slim
+++ b/app/views/nodes/index.html.slim
@@ -6,6 +6,7 @@ table
       th Node
       th Node status
       th Node name
+      th Heartbeat
       th Ip
       th Geo name
       th Db connection
@@ -21,6 +22,7 @@ table
         td = node.node_id
         td = node.node_status
         td = node.node_name
+        td = node.heartbeat
         td = node.ip
         td = node.geo_name
         td = node.db_connection
