--- a/app/views/hosts/_form.html.slim
+++ b/app/views/hosts/_form.html.slim
@@ -1,27 +1,10 @@
-= form_for @host do |f|
-  - if @host.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@host.errors.count, 'error')} prohibited this host from being saved:"
-      ul
-        - @host.errors.full_messages.each do |message|
-          li = message
-
-  .field
-    = f.label :domain
-    = f.text_field :domain
-  .field
-    = f.label :user_id
-    = f.number_field :user_id
-  .field
-    = f.label :prot
-    = f.text_field :prot
-  .field
-    = f.label :monitor_status
-    = f.number_field :monitor_status
-  .field
-    = f.label :last_status
-    = f.number_field :last_status
-  .field
-    = f.label :last_check
-    = f.datetime_select :last_check
-  .actions = f.submit
+= simple_form_for @host do |f|
+  .form-inputs
+    = f.input :name
+    = f.input :domain, label: "Url"
+    = f.input :prot
+    = f.input :monitor_status
+    = f.input :last_status
+    = f.input :last_check
+  .form-actions
+    = f.submit
