--- a/app/views/pages/dashboard.html.slim
+++ b/app/views/pages/dashboard.html.slim
@@ -5,15 +5,18 @@
     - if user_signed_in?
       h3
         = title("Dashboard")
+      javascript:
+        var dataset1={};
       p
       form action="/hosts" method="post"
         input type="hidden" name="authenticity_token" value="=form_authenticity_token"
         ="Add new host"
         input type="hidden" name="utf8" value="%E2%9C%93"
+        input name="host[name]" type="hidden"
         input name="host[domain]" id="host_domain" type="text" size="40"
         input name="host[prot]" type="hidden" value="http"
         input name="host[monitor_status]" type="hidden" value="0"
-        input name="host[last_status]" type="hidden" value="1"
+        input name="host[last_status]" type="hidden"
         input name="host[last_check(1i)]" type="hidden"
         input name="host[last_check(2i)]" type="hidden"
         input name="host[last_check(3i)]" type="hidden"
@@ -30,58 +33,8 @@
         br
         = link_to "Aggregators", "aggregators/"
       hr
-    - if @hosts.count.zero?
-      h3
-        ="You don't have any hosts for monitoring. Create a new one."
-      br
-    - else
-      h4 Hosts being monitored
-      table
-        thead
-          tr
-            th Monitoring
-            th Host
-            th Status
-            th History
-            th Last check
-            th Node
-            th
-            th
-            th
+    div id="hosts"
+      = render partial: "reload_hosts", locals: { hosts: @hosts }
+javascript:  setInterval(function() {
+     $.ajax({ url: "reload_hosts" })}, 10000);
 
-        tbody
-          - @hosts.each do |host|
-            tr
-              td
-                -if host.monitor_status == 1
-                  span style="color:#008000"
-                   b
-                    ="Running"
-                    span
-                    =" "
-                  = link_to "Stop", "hosts/" + host.id.to_s + "/stop"
-                -else
-                  span style="color:#000000"
-                   ="Paused "
-                  = link_to "Play", "hosts/" + host.id.to_s + "/play"
-              td = host.domain
-              td
-                -if host.monitor_status == 1
-                  -if host.last_status == 1
-                    b
-                     span style="color:#008000"
-                      ="UP"
-                  -else
-                    b
-                     span style="color:#FF0000"
-                      ="DOWN"
-                -else
-                  ="N/A"
-              td = link_to "Status history", "host/" + host.id.to_s + "/statuses"
-              td = host.last_check_string
-              td = host.last_node
-              td = link_to "Show", host
-              td = link_to "Edit", edit_host_path(host)
-              td = link_to "Delete", host, data: { confirm: "Are you sure?" }, method: :delete
-
-      br
