--- a/app/views/hosts/statuses.html.slim
+++ b/app/views/hosts/statuses.html.slim
@@ -67,6 +67,7 @@ javascript:
     points_dataset.push(dataset);
   };
 
+= javascript_include_tag "stats.js"
 / script:
 /   //Get the canvas & context
 /   | var c = document.getElementById('statChart');
