--- a/app/views/application/_navigation_main.html.slim
+++ b/app/views/application/_navigation_main.html.slim
@@ -3,3 +3,6 @@
     li = link_to "Firewatch", root_path
     - if user_signed_in?
       = active_link_to "Home", root_path, active: :exclusive, wrap_tag: :li
+      - if current_user.admin
+        li = link_to "Nodes", nodes_path
+        li = link_to "Aggregators", aggregators_path
