--- a/app/views/hosts/edit.html.slim
+++ b/app/views/hosts/edit.html.slim
@@ -1,8 +1,8 @@
-h1 Editing host
+.row
+  .large-6.medium-8.small-10.column
+    h1 Editing host
 
-== render "form"
-
-= link_to "Show", @host
-'|
-= link_to "Back", hosts_path
-
+    == render "form"
+    br
+    = link_to "Back", root_path
+    br
