--- a/app/views/aggregators/_form.html.slim
+++ b/app/views/aggregators/_form.html.slim
@@ -1,24 +1,11 @@
-= form_for @aggregator do |f|
-  - if @aggregator.errors.any?
-    #error_explanation
-      h2 = "#{pluralize(@aggregator.errors.count, 'error')} prohibited this aggregator from being saved:"
-      ul
-        - @aggregator.errors.full_messages.each do |message|
-          li = message
-
-  .field
-    = f.label :aggregator_id
-    = f.number_field :aggregator_id
-  .field
-    = f.label :aggregator_status
-    = f.number_field :aggregator_status
-  .field
-    = f.label :aggregator_name
-    = f.text_field :aggregator_name
-  .field
-    = f.label :db_connection
-    = f.text_field :db_connection
-  .field
-    = f.label :message_queue_connection
-    = f.text_field :message_queue_connection
-  .actions = f.submit
+.row
+  .large-6.medium-8.column
+    = simple_form_for aggregator do |f|
+      .inputs-group
+        = f.input :aggregator_id
+        = f.input :aggregator_status
+        = f.input :aggregator_name
+        = f.input :db_connection
+        = f.input :message_queue_connection
+      .actions-group
+        = f.submit
