--- a/app/views/aggregators/edit.html.slim
+++ b/app/views/aggregators/edit.html.slim
@@ -1,8 +1,10 @@
-h1 Editing aggregator
+.row
+  .large-12.column
+    h1 Editing aggregator
 
-== render "form"
+    == render "form"
 
-= link_to "Show", @aggregator
-'|
-= link_to "Back", aggregators_path
+    = link_to "Show", aggregator
+    '|
+    = link_to "Back", aggregators_path
 
