--- a/app/views/nodes/edit.html.slim
+++ b/app/views/nodes/edit.html.slim
@@ -1,8 +1,8 @@
-h1 Editing node
+.row
+  .large-12.column
+    h1 Editing node
 
-== render "form"
-
-= link_to "Show", @node
-'|
-= link_to "Back", nodes_path
+    == render "form"
+    br
+    = link_to "Back", nodes_path
 
