--- a/app/views/pages/reload_hosts.js.erb
+++ b/app/views/pages/reload_hosts.js.erb
@@ -1,1 +1,1 @@
-$('#hosts').html("<%= escape_javascript(render 'reload_hosts', hosts: @hosts) %>");
+$('#hosts').html("<%= escape_javascript(render 'reload_hosts', hosts: hosts) %>");
