--- a/app/assets/stylesheets/core/settings.scss
+++ b/app/assets/stylesheets/core/settings.scss
@@ -60,6 +60,9 @@ $medium-gray: #cacaca;
 $dark-gray: #8a8a8a;
 $black: #0a0a0a;
 $white: #fefefe;
+$red: #f00;
+$blue: #2199e8;
+
 $body-background: $white;
 $body-font-color: $black;
 $body-font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
