--- a/app/views/aggregators/new.html.slim
+++ b/app/views/aggregators/new.html.slim
@@ -1,5 +1,7 @@
-h1 New aggregator
+.row
+  .large-12.column
+    h1 New aggregator
 
-== render "form"
+    == render "form"
 
-= link_to "Back", aggregators_path
+    = link_to "Back", aggregators_path
