--- a/app/views/hosts/_reload_history.html.slim
+++ b/app/views/hosts/_reload_history.html.slim
@@ -1,21 +1,21 @@
 table id="stat_table"
   thead
     tr
-      th URL
-      th Time
-      th Status
-      th Response time
+      th.header URL
+      th.header Time
+      th.header Status
+      th.header Response time
       th Node location
-      th
   tbody
-    - @statuses.each do |status|
+    - statuses.each do |status|
       tr
-        td = status.url
+        td.item = status.url
         td style="display:none;" = status.created_at.iso8601
-        td = status.created_at.strftime("%H:%M:%S %d.%m.%Y")
-        td style="display:none;" = status.node_id
+        td.item = status.created_at.strftime("%H:%M:%S %d.%m.%Y")
         td.has-tip.data-tooltip aria-haspopup="true" data-disable-hover="false" style=status.style title=status.error
           = status.status_string
-        td = status.response_time
+        td.item = status.response_time
         td.has-tip.data-tooltip aria-haspopup="true" data-disable-hover = "false" title = status.tooltip
           = status.node_location
+        td style="display:none;" =status.error
+        td style="display:none;" =status.time
