--- a/app/views/hosts/new.html.slim
+++ b/app/views/hosts/new.html.slim
@@ -1,5 +1,7 @@
-h1 New host
+.row
+  .large-12.column
+    h1 New host
 
-== render "form"
+    == render "form"
 
-= link_to "Back", hosts_path
+    = link_to "Back", hosts_path
