--- a/app/views/hosts/reload_history.js.erb
+++ b/app/views/hosts/reload_history.js.erb
@@ -1,1 +1,1 @@
-$("#history").html("<%= escape_javascript(render 'reload_history', statuses: @statuses) %>");
+$("#history").html("<%= escape_javascript(render 'reload_history', statuses: statuses) %>");
