--- a/app/views/nodes/new.html.slim
+++ b/app/views/nodes/new.html.slim
@@ -1,5 +1,7 @@
-h1 New node
+.row
+  .large-12.column
+    h1 New node
 
-== render "form"
+    == render "form"
 
-= link_to "Back", nodes_path
+    = link_to "Back", nodes_path
