--- a/app/views/nodes/index.html.slim
+++ b/app/views/nodes/index.html.slim
@@ -18,7 +18,7 @@
       tbody
         - nodes.each do |node|
           tr
-            td = node.node_id
+            td = node.id
             td = node.node_status
             td = node.node_name
             td = node.heartbeat
