--- a/app/views/hosts/_form.html.slim
+++ b/app/views/hosts/_form.html.slim
@@ -1,8 +1,10 @@
 .row
   .column-6.medium-8.column
-    = simple_form_for host do |f|
+    = simple_form_for host.to_model do |f|
       .inputs-group
-        = f.input :name
+        = f.input :name, required: true
         = f.input :domain, label: "Url"
+        = f.association :notifications, collection: current_user.notifications.all, \
+          as: :check_boxes, label_method: :name, value_method: :id
       .actions-group
-        = f.submit
+        = f.button :submit, class: "button success"
