--- a/app/views/hosts/status_history.html.slim
+++ b/app/views/hosts/status_history.html.slim
@@ -15,6 +15,8 @@
       canvas id="statChart" width="1000" height="300"
 
     hr
+    div id="paginator"
+      = paginate statuses, remote: true, params: { controller: "hosts", action: "reload_history" }
     div id="history"
       = render partial: "reload_history", locals: { statuses: statuses }
     br
@@ -73,7 +75,6 @@ javascript:
         borderColor: color +",1)",
         borderWidth: 1,
         lineTension: 0,
-        //pointBackgroundColor:[],
         pointBorderColor: [],
         pointRadius:[]
       };
@@ -102,6 +103,6 @@ javascript:
 
 javascript:
   setInterval(function() {
-    $.ajax({ url: "reload_history" })
+    $.ajax({ url: "reload_history?page="+$(".current").text() })
     update_chart();
   }, 30000);
