Update _navigation_main.html.slim (#54)

--- a/app/views/application/_navigation_main.html.slim
+++ b/app/views/application/_navigation_main.html.slim
@@ -6,6 +6,7 @@
       - if current_user.admin
         li = link_to "Nodes", nodes_path
         li = link_to "Aggregators", aggregators_path
+        li = link_to "Notifications settings", notifications_path
         li = link_to "Notification types", notification_types_path
       - else
         li = link_to "Notifications settings", notifications_path
